Uploaded image for project: 'Core Server'
  1. Core Server
  2. SERVER-62759

applyOps of dropDatabase causes invariant failure

    • Type: Icon: Bug Bug
    • Resolution: Fixed
    • Priority: Icon: Major - P3 Major - P3
    • 6.0.0-rc0, 5.3.0-rc3
    • Affects Version/s: 5.2.0
    • Component/s: None
    • Labels:
      None
    • Minor Change
    • ALL
    • v5.3
    • Execution Team 2022-02-21, Execution Team 2022-03-07
    • 149

      Running this command on a 5.2 ReplicaSet with a nonempty database:

      db.adminCommand({"applyOps":[{"op":"c","ns":"test.$cmd","o":{"dropDatabase":1}}]}) 

      Results in a fatal error:

      {"t":{"$date":"2022-01-19T19:14:56.503+01:00"},"s":"F",  "c":"ASSERT",   "id":23079,   "ctx":"conn33","msg":"Invariant failure","attr":{"expr":"!opCtx->lockState()->isLocked()","file":"src/mongo/db/catalog/drop_database.cpp","line":309}}
      {"t":{"$date":"2022-01-19T19:14:56.503+01:00"},"s":"F",  "c":"ASSERT",   "id":23080,   "ctx":"conn33","msg":"\n\n***aborting after invariant() failure\n\n"}
      {"t":{"$date":"2022-01-19T19:14:56.503+01:00"},"s":"F",  "c":"CONTROL",  "id":4757800, "ctx":"conn33","msg":"Writing fatal message","attr":{"message":"Got signal: 6 (Abort trap: 6).\n"}} 

      Looks like this is due to SERVER-49866.

            Assignee:
            jordi.olivares-provencio@mongodb.com Jordi Olivares Provencio
            Reporter:
            tim.fogarty@mongodb.com Tim Fogarty
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: