SERVER-62759 Add lock release in dropDatabase for applyOps

(cherry picked from commit 8696ce442652f7a69232b35901b73684bbcf7a88)